k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}' 
spec:
  # type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: server
