k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: server-ing
spec:
  backend:
    serviceName: server-service
    servicePort: 80
